--- a/about.html
+++ b/about.html
@@ -20,20 +20,19 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
-            <p class="apresentacao__conteudo__texto">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti
-                atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident,
-                similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga.
+            <p class="apresentacao__conteudo__texto">Com apenas 18 anos, tenho orgulho de destacar minha experiência 
+                profissional diversificada. Comecei meus estudos no campo da mecânica de usinagem no SENAI aos 14 anos, 
+                o que me permitiu desenvolver minha responsabilidade e habilidade para gerenciar tarefas. Aos 16 anos, 
+                tive a oportunidade de trabalhar em uma fábrica de usinagem, o que me possibilitou adquirir postura 
+                profissional e experiencia na manipulação de máquinas complexas. Atualmente, trabalho em uma multinacional 
+                na área fiscal, onde aprendi a seguir prazos apertados e a lidar com problemas reais, além de aprender a 
+                resolver problemas na base da conversação. Além disso, tenho habilidade para trabalhar em equipe e sou 
+                proativo(a) para aprender novos conceitos e desafios.
             </p>
             <p class="apresentacao__conteudo__texto">
-                Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est
-                eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas
-                assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum
-                necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum
-                rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut
-                perferendis doloribus asperiores ipsum delis forum birol parela maxime infena. Excepteur sint occaecat
-                cupidatat non.</p>
+                Acima uma breve descrição sobre minha história.</p>
         </section>
-        <img src="./assets/imagem.png" alt="Foto da Joana Santos programando">
+        <img src="./assets/minhaViagem.png" alt="Foto de minha viagem com minha namorada em Caraguatatuba.">
     </main>
 
     <footer class="rodape">
